shared admin index view

--- a/app/views/layouts/admin/_nav.html.erb
+++ b/app/views/layouts/admin/_nav.html.erb
@@ -20,10 +20,11 @@
 			<%= content_tag :li, link_to('Destinations', admin_destinations_path) -%>
 			<%= content_tag :li, link_to('Casinos', admin_casinos_path) -%>
 			<hr>
+			<%= content_tag :li, link_to('Venues', admin_venues_path) -%>
+			<%= content_tag :li, link_to('Attractions', admin_attractions_path) -%>
 			<%= content_tag :li, link_to('Land Events', admin_land_events_path) -%>
 			<%= content_tag :li, link_to('Cruises', admin_cruises_path) -%>
 			<%= content_tag :li, link_to('Ports', admin_ports_path) -%>
-			<%= content_tag :li, link_to('Venues', admin_venues_path) -%>
 			<%#= content_tag :li, link_to('Ships', '#admin_ships_path') -%>
 			<hr>
 			<%= content_tag :li, link_to('Flights', admin_flights_path) -%>
