--- a/app/views/admin/pictures/_nested_fields.html.erb
+++ b/app/views/admin/pictures/_nested_fields.html.erb
@@ -1,28 +1,30 @@
 <div class="col-sm-6">
-	<div class="well well-sm">
-		<div class="form-group">
-			<%= f.label :title %>
-			<%= f.text_field :title, class: 'form-control input-sm' %>
-		</div>
-		<div class="form-group">
-			<%= f.label :caption %>
-			<%= f.text_area :caption, class: 'form-control input-sm' %>
-		</div>
-		<div class="form-group">
-			<%= f.label :alt %>
-			<%= f.text_field :alt, class: 'form-control input-sm' %>
-		</div>
-		<div class="form-group">
-			<%= f.label :description %>
-			<%= f.text_area :description, class: 'form-control input-sm' %>
-		</div>
-		<div class="form-group">
-			<%= f.label :gh_name %>
-			<%= f.text_field :gh_name, class: 'form-control input-sm' %>
-		</div>
-		<div class="form-group">
-			<%= f.label :gh_url %>
-			<%= f.text_field :gh_url, class: 'form-control input-sm' %>
+	<div class="thumbnail">
+		<div class="caption">
+			<div class="form-group">
+				<%= f.label :title %>
+				<%= f.text_field :title, class: 'form-control input-sm' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :caption %>
+				<%= f.text_area :caption, class: 'form-control input-sm' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :alt %>
+				<%= f.text_field :alt, class: 'form-control input-sm' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :description %>
+				<%= f.text_area :description, class: 'form-control input-sm' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :gh_name %>
+				<%= f.text_field :gh_name, class: 'form-control input-sm' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :gh_url %>
+				<%= f.text_field :gh_url, class: 'form-control input-sm' %>
+			</div>
 		</div>
 	</div>
 </div>
