nested attraction attributes

--- a/app/views/admin/admin/shared_index.html.erb
+++ b/app/views/admin/admin/shared_index.html.erb
@@ -20,10 +20,9 @@
 					<%= link_to item.name, send("edit_admin_#{item_type}_path", item) -%>
 				</td>
 				<td class="text-right">
-					<%= link_to fa_icon('eye'), item, class: 'btn btn-info btn-xs' -%>
+					<%= link_to fa_icon('eye'), item_path(item, item_type), class: 'btn btn-info btn-xs' -%>
 					<%= link_to fa_icon('remove'), [:admin, item], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' -%>
 				</td>
-
 			</tr>
 			<% end %>
 		</tbody>
