--- a/app/views/admin/attractions/_form.html.erb
+++ b/app/views/admin/attractions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@attraction) do |f| %>
+<%= form_for [:admin, @attraction] do |f| %>
   <% if @attraction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@attraction.errors.count, "error") %> prohibited this attraction from being saved:</h2>
@@ -11,15 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+  <div class="form-group">
+    <%= f.label :content %>
+    <%= f.text_area :content, class: 'froala_content' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
