--- a/app/views/admin/attractions/edit.html.erb
+++ b/app/views/admin/attractions/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @attraction %> |
-<%= link_to 'Back', attractions_path %>
+<%= link_to 'Back', admin_attractions_path %>
