--- a/app/views/admin/attractions/_nested_fields.html.erb
+++ b/app/views/admin/attractions/_nested_fields.html.erb
@@ -2,8 +2,7 @@
 	<div class="input-group input-group-sm">
 		<%= f.collection_select :attraction_id, Attraction.all, :id, :name, {prompt: 'Select Attraction'}, {class: 'form-control'} %>
 		<span class="input-group-btn">
-		<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger' %>
+		<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
 		</span>
 	</div>
 </div>
-
