--- a/app/views/admin/attractions/_form.html.erb
+++ b/app/views/admin/attractions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @attraction] do |f| %>
+<%= form_for [:admin, @attraction], html: {multipart: true} do |f| %>
   <% if @attraction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@attraction.errors.count, "error") %> prohibited this attraction from being saved:</h2>
