--- a/app/views/admin/casinos/_form.html.erb
+++ b/app/views/admin/casinos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@casino) do |f| %>
+<%= form_for [:admin, @casino], html: {multipart: true} do |f| %>
   <% if @casino.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@casino.errors.count, "error") %> prohibited this casino from being saved:</h2>
