--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @event] do |f| %>
+<%= form_for [:admin, @event], html: {multipart: true} do |f| %>
 <% if @event.errors.any? %>
 <div id="error_explanation">
 	<h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -43,18 +43,6 @@
 <% end -%>
 
 <%= render 'admin/admin/nested_accordion', f: f, includes: @nested_includes -%>
-
-
-
-<% if false -%>
-<div class="btn-group btn-group-justified form-group" role="group">
-	<%= link_to 'Port of Calls', '#', class: 'btn btn-info', data: {toggle: :modal, target: '#portOfCallsModal'} if @event.type == 'Cruise' -%>
-</div>
-<%= render 'poc_modal', f: f if @event.type == 'Cruise' -%>
-<% end -%>
-
-
-
 
 <div class="actions">
 	<%= f.submit nil, class: 'btn btn-primary btn-lg' %>
