--- a/app/views/admin/pictures/_form.html.erb
+++ b/app/views/admin/pictures/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @picture] do |f| %>
+<%= form_for [:admin, @picture], html: {multipart: true} do |f| %>
   <% if @picture.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
