--- a/app/views/admin/pictures/_nested_fields.html.erb
+++ b/app/views/admin/pictures/_nested_fields.html.erb
@@ -6,8 +6,8 @@
 				<% if f.object.persisted? -%>
 				<%= image_tag f.object.gh_url, class: 'media-object', width: 96  -%>
 				<% else -%>
-				<span class="btn btn-success btn-file" style="width: 96px;">
-					<%= fa_icon 'file' -%> <%= f.file_field :tmp_file %>
+				<span class="btn btn-default btn-file" style="width: 96px;">
+					<%= fa_icon 'file', class: 'file-input-icon' -%> <%= f.file_field :tmp_file %>
 				</span>
 				<% end -%>
 			</p>
