--- a/app/views/admin/ports/_nested_fields.html.erb
+++ b/app/views/admin/ports/_nested_fields.html.erb
@@ -1,14 +1,30 @@
-<tr class="nested-fields">
-	<td>
-		<%= f.collection_select :port_id, Port.all, :id, :name, {prompt: 'Select Port'}, {class: 'form-control'} %>
-	</td>
-	<td>
-		<%= f.datetime_select :arrives_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
-	</td>
-	<td>
-		<%= f.datetime_select :departs_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
-	</td>
-	<td>
-		<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger btn-xs' %>
-	</td>
-</tr>
+<li class="nested-fields list-group-item">
+	<div class="list-group-item-text">
+
+		<div class="form-group">
+			<%= f.label :port_id %>
+			<div class="input-group input-group-sm">
+				<%= f.collection_select :port_id, Port.all, :id, :name, {prompt: 'Select Port'}, {class: 'form-control'} %>
+				<span class="input-group-btn">
+					<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
+				</span>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="form-group">
+					<%= f.label :arrives_at, 'Arrival' %><br>
+					<%= f.datetime_select :arrives_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="form-group">
+					<%= f.label :departs_at, 'Departure' %><br>
+					<%= f.datetime_select :departs_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</li>
