--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
 	<% @type.constantize.has_image.each do |event| -%>
 	<div class="col-sm-6 col-md-3">
 		<div class="well well-sm">
-			<%= link_to image_tag(event.all_pictures.first.gh_url, class: 'img-thumbnail'), event -%>
+			<%= link_to image_tag(event.pictures.first.gh_url, class: 'img-thumbnail'), event -%>
 			<div class="caption">
 				<h4>
 					<%= event.title -%>
