--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,9 +3,9 @@
 <div class="row">
 	
 	<aside class="col-sm-4">
-		<% if @event.all_pictures.any? -%>
+		<% if @event.pictures.any? -%>
 		<figure class="thumbnail">
-			<%= link_to image_tag(@event.all_pictures.first.gh_url), sti_event_pictures_path(@event), data: {toggle: :modal, target: '#defaultModal'} -%>
+			<%= link_to image_tag(@event.pictures.first.gh_url), sti_event_pictures_path(@event), data: {toggle: :modal, target: '#defaultModal'} -%>
 		</figure>
 		<% else -%>
 		<!-- default event image -->
