--- a/app/views/admin/attractions/_form.html.erb
+++ b/app/views/admin/attractions/_form.html.erb
@@ -1,25 +1,28 @@
 <%= form_for [:admin, @attraction], html: {multipart: true} do |f| %>
-  <% if @attraction.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@attraction.errors.count, "error") %> prohibited this attraction from being saved:</h2>
+<% if @attraction.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@attraction.errors.count, "error") %> prohibited this attraction from being saved:</h2>
 
-      <ul>
-      <% @attraction.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+	<ul>
+		<% @attraction.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 
-  <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :content %>
-    <%= f.text_area :content, class: 'froala_content' %>
-  </div>
-  <div class="actions">
-    <%= f.submit nil, class: 'btn btn-primary btn-lg' %>
-  </div>
+<div class="form-group">
+	<%= f.label :name %>
+	<%= f.text_field :name, class: 'form-control' %>
+</div>
+<div class="form-group">
+	<%= f.label :content %>
+	<%= f.text_area :content, class: 'froala_content form-control' %>
+</div>
+
+<%= render 'admin/admin/nested_accordion', f: f, includes: [:pictures] -%>
+
+<div class="actions">
+	<%= f.submit nil, class: 'btn btn-primary btn-lg' %>
+</div>
 <% end %>
