--- a/app/views/admin/destinations/_form.html.erb
+++ b/app/views/admin/destinations/_form.html.erb
@@ -11,31 +11,24 @@
 </div>
 <% end %>
 
-<div class="row">
-
-	<div class="col-sm-8">
-
-
-		<div class="form-group">
-			<%#= f.label :name %>
-			<%= f.text_field :name, class: 'form-control input-lg', placeholder: 'Destination Name' %>
-		</div>
-
-		<div class="form-group">
-			<%= f.label :content, 'Destination Content' %>
-			<%= f.text_area :content, class: 'froala_content' %>
-		</div>
-
-	</div>
-
-	<div class="col-sm-4">
-
-		<%#= render 'admin/admin/images/pictures_upload', f: f -%>
-
-		<%= f.submit nil, class: 'btn btn-primary btn-lg btn-block' %>
-
-	</div>
-
+<div class="form-group">
+	<%= f.label :name %>
+	<%= f.text_field :name, class: 'form-control' %>
 </div>
+
+<div class="form-group">
+	<%= f.label :slug %>
+	<%= f.text_field :slug, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+	<%= f.label :content, 'Destination Content' %>
+	<%= f.text_area :content, class: 'froala_content form-control' %>
+</div>
+
+<%= render 'admin/admin/nested_accordion', f: f, includes: [:pictures] -%>
+
+<%= f.submit nil, class: 'btn btn-primary btn-lg btn-block' %>
+
 
 <% end %>
