--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -19,16 +19,16 @@
 <div class="form-group">
 	<%= f.label :venue_id %>
 	<div class="input-group">
-		<%= render 'admin/venues/select' -%>
+		<%= f.collection_select :venue_id, Venue.all, :id, :name, {include_blank: 'Select Venue'}, class: 'form-control', id: 'select_venue' -%>
 		<span class="input-group-btn">
-			<%= link_to 'Add Venue', new_admin_venue_path(modal: true, type: @type), class: 'btn btn-info', data: {toggle: :modal, target: '#defaultModal'} -%>
+			<%= link_to 'Add Venue', new_admin_venue_path, class: 'btn btn-warning', data: { confirm: 'You are leaving this page. Unsaved changes will be lost.' } -%>
 		</span>
 	</div>
 </div>
 
 <div class="form-group">
 	<%= f.label :content %>
-	<%= f.text_area :content, class: 'froala_content' %>
+	<%= f.text_area :content, class: 'froala_content form-control' %>
 </div>
 
 <% unless @event.type == 'Cruise' -%>
