--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -30,7 +30,7 @@
 		</div>
 		<div class="form-group">
 			<%= f.label :content, 'Page Content' %>
-			<%= f.text_area :content, class: 'froala_content' %>
+			<%= f.text_area :content, class: 'froala_content form-control' %>
 		</div>
 
 	</div>
