--- a/app/views/admin/venues/_form.html.erb
+++ b/app/views/admin/venues/_form.html.erb
@@ -18,13 +18,17 @@
 	<%= f.text_field :name, class: 'form-control' %>
 </div>
 <div class="form-group">
+	<%= f.label :slug %>
+	<%= f.text_field :slug, class: 'form-control' %>
+</div>
+<div class="form-group">
 	<%= f.label :address %>
 	<%= f.text_field :address, class: 'form-control' %>
 </div>
 
 <div class="form-group">
 	<%= f.label :content %>
-	<%= f.text_area :content, class: 'froala_content' %>
+	<%= f.text_area :content, class: 'froala_content form-control' %>
 </div>
 
 <%= render 'admin/admin/nested_accordion', f: f, includes: [:pictures, :attractions] -%>
