--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -23,7 +23,7 @@
 	<div class="container">
 
 		<div class="page-header">
-			<h1>Administrative Interface</h1>
+			<h4 class="text-muted text-right">Administrative Interface</h4>
 		</div>
 
 		<div class="row">
