validate cruise's presence of 2 ports

--- a/app/views/admin/casinos/_form.html.erb
+++ b/app/views/admin/casinos/_form.html.erb
@@ -43,6 +43,6 @@
 <%= render 'admin/admin/nested_accordion', f: f, includes: [:pictures] -%>
 
 <div class="actions">
-	<%= f.submit nil, class: 'btn btn-lg bnt-primary' %>
+	<%= f.submit nil, class: 'btn btn-lg btn-primary' %>
 </div>
 <% end %>
