--- a/app/views/events/_upcoming.html.erb
+++ b/app/views/events/_upcoming.html.erb
@@ -16,7 +16,9 @@
 					<%= event.title -%><br>
 					<small><%= event.date_span -%></small>
 				</h5>
-				<%= event.excerpt(80) -%>
+				<small>
+					<%= event.excerpt(80) -%>
+				</small>
 			</div>
 		</div>
 		<% end -%>
