--- a/app/views/admin/destinations/_form.html.erb
+++ b/app/views/admin/destinations/_form.html.erb
@@ -28,7 +28,7 @@
 
 <%= render 'admin/admin/nested_accordion', f: f, includes: [:pictures] -%>
 
-<%= f.submit nil, class: 'btn btn-primary btn-lg btn-block' %>
+<%= f.submit nil, class: 'btn btn-primary btn-lg' %>
 
 
 <% end %>
