--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -9,7 +9,7 @@
 			<%= link_to image_tag(destination.pictures.first.gh_url, class: 'img-thumbnail'), destination -%>
 			<div class="caption">
 				<h4>
-					<%= destination.title -%>
+					<%= destination.name -%>
 				</h4>
 			</div>
 		</div>
