--- a/app/views/admin/pictures/_nested_fields.html.erb
+++ b/app/views/admin/pictures/_nested_fields.html.erb
@@ -4,10 +4,10 @@
 		<div class="media-left">
 			<p>
 				<% if f.object.persisted? -%>
-				<%= image_tag f.object.gh_url, class: 'media-object', width: 96  -%>
+				<%= image_tag f.object.image_url, class: 'media-object', width: 96  -%>
 				<% else -%>
 				<span class="btn btn-default btn-file" style="width: 96px;">
-					<%= fa_icon 'file', class: 'file-input-icon' -%> <%= f.file_field :tmp_file %>
+					<%= fa_icon 'file', class: 'file-input-icon' -%> <%= f.file_field :image %>
 				</span>
 				<% end -%>
 			</p>
