--- a/app/views/ports/show.html.erb
+++ b/app/views/ports/show.html.erb
@@ -8,7 +8,7 @@
 		</div>
 		<div class="modal-body">
 
-			<%= image_tag @port.pictures.first.gh_url, class: 'img-responsive col-sm-4 pull-left' if @port.pictures.any? -%>
+			<%= image_tag @port.pictures.first.image_url, class: 'img-responsive col-sm-4 pull-left' if @port.pictures.any? -%>
 
 			<%= @port.rendered_content %>
 
