--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -7,7 +7,7 @@
 		<div class="panel panel-default">
 			
 			<% if @venue.pictures.any? -%>
-			<%= link_to image_tag(@venue.pictures.first.gh_url, class: 'img-responsive'), venue_pictures_path(@venue), data: {toggle: :modal, target: '#defaultModal'} -%>
+			<%= link_to image_tag(@venue.pictures.first.image_url, class: 'img-responsive'), venue_pictures_path(@venue), data: {toggle: :modal, target: '#defaultModal'} -%>
 			<% else -%>
 			<!-- default venue image -->
 			<% end -%>
