--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -1,3 +1,5 @@
+<% @page_header = flight_title(@flight) -%>
+
 <p>
   <strong>Destination:</strong>
   <%= @flight.destination_id %>
@@ -28,5 +30,5 @@
   <%= @flight.flight_number %>
 </p>
 
-<%= link_to 'Edit', edit_flight_path(@flight) %> |
+<%= link_to 'Edit', edit_admin_flight_path(@flight) %> |
 <%= link_to 'Back', flights_path %>
