--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,12 +19,12 @@
 @import "font-awesome";
 
 // @import "bootstrap/variables";
-// @import "bootstrap-sprockets";
 @import "bootswatch/custom_darkly/variables";
 @import "bootstrap";
 @import "bootswatch/custom_darkly/bootswatch";
-// @import "bootstrap-datetimepicker";
-/*@import "bootswatch";*/
+@import "bootstrap-sprockets";
+@import "bootstrap-datetimepicker";
+// @import "bootswatch";
 
 // @import url('http://fonts.googleapis.com/css?family=Roboto');
 
