--- a/app/views/admin/flights/_form.html.erb
+++ b/app/views/admin/flights/_form.html.erb
@@ -1,37 +1,59 @@
 <%= form_for [:admin, @flight] do |f| %>
-  <% if @flight.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
+<% if @flight.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
 
-      <ul>
-      <% @flight.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+	<ul>
+		<% @flight.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 
-  <div class="field">
-    <%= f.label :departing_airport %><br>
-    <%= f.text_field :departing_airport %>
-  </div>
-  <div class="field">
-    <%= f.label :departing_at %><br>
-    <%= f.datetime_select :departing_at %>
-  </div>
-  <div class="field">
-    <%= f.label :arriving_airport %><br>
-    <%= f.text_field :arriving_airport %>
-  </div>
-  <div class="field">
-    <%= f.label :arriving_at %><br>
-    <%= f.datetime_select :arriving_at %>
-  </div>
-  <div class="field">
-    <%= f.label :flight_number %><br>
-    <%= f.text_field :flight_number %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+<% usec = Time.now.usec -%>
+<div class="row">
+	<div class="col-sm-7">
+		<div class="form-group">
+			<%= f.label :departing_airport %>
+			<%= f.text_field :departing_airport, class: 'form-control' %>
+		</div>
+	</div>
+	<div class="col-sm-5">
+		<%= render 'admin/admin/datepicker', f: f, field: :departing_at, dtp_class: 'start', usec: usec -%>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-sm-7">
+		<div class="form-group">
+			<%= f.label :arriving_airport %>
+			<%= f.text_field :arriving_airport, class: 'form-control' %>
+		</div>
+	</div>
+	<div class="col-sm-5">
+		<%= render 'admin/admin/datepicker', f: f, field: :arriving_at, dtp_class: 'end', usec: usec -%>
+	</div>
+</div>
+
+<div class="form-group">
+	<%= f.label :flight_number %>
+	<%= f.text_field :flight_number, class: 'form-control' %>
+</div>
+
+<% if false -%>
+<div class="form-group">
+	<%= f.label :departing_at %>
+	<%= f.datetime_select :departing_at, class: 'form-control' %>
+</div>
+<div class="form-group">
+	<%= f.label :arriving_at %>
+	<%= f.datetime_select :arriving_at, class: 'form-control' %>
+</div>
+<% end -%>
+
+<div class="actions">
+	<%= f.submit nil, class: 'btn btn-primary btn-lg' %>
+</div>
 <% end %>
