--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -3,6 +3,10 @@
 <span class="divider"></span>
 <% end -%>
 
+<div class="row">
+	<%= render 'layouts/featured_images', items: @venues -%>
+</div>
+
 <div class="table-responsive">
 	<table class="table table-striped">
 		<thead>
