--- a/app/views/admin/pictures/_nested_fields.html.erb
+++ b/app/views/admin/pictures/_nested_fields.html.erb
@@ -7,7 +7,7 @@
 				<%= image_tag f.object.image_url, class: 'media-object', width: 96  -%>
 				<% else -%>
 				<span class="btn btn-default btn-file" style="width: 96px;">
-					<%= fa_icon 'file', class: 'file-input-icon' -%> <%= f.file_field :image %>
+					<%= fa_icon 'file 2x', class: 'file-input-icon' -%> <%= f.file_field :image %>
 				</span>
 				<% end -%>
 			</p>
