--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -3,25 +3,25 @@
 <div class="row">
 	
 	<aside class="col-sm-4">
-		
-		<div class="panel panel-default">
-			
-			<% if @venue.pictures.any? -%>
-			<%= link_to image_tag(@venue.pictures.first.image_url, class: 'img-responsive'), venue_pictures_path(@venue), data: {toggle: :modal, target: '#defaultModal'} -%>
-			<% else -%>
-			<!-- default venue image -->
-			<% end -%>
 
+		<% if @venue.pictures.any? -%>
+		<figure class="thumbnail">
+			<%= link_to image_tag(@venue.pictures.first.image_url), venue_pictures_path(@venue), data: {toggle: :modal, target: '#defaultModal'} -%>
+		</figure>
+		<% else -%>
+		<!-- default venue image -->
+		<% end -%>
+
+		<% if false -%>
+		<div class="panel panel-default">
 			<div class="panel-body">
-				<% if @venue.address.present? -%>
 				<p>
 					<strong>Address:</strong>
 					<%= @venue.address %>
 				</p>
-				<% end -%>
 			</div>
-
 		</div>
+		<% end -%>
 
 		<%= render 'events/upcoming', events: @venue.events, render_footer: false -%>
 
