constant contact form

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -118,35 +118,9 @@
 		</div>
 		<div class="col-md-4">
 			<div class="well">
-				<h4>Sign  up for Special Offers</h4>
-				<p>
-					Sign up for our Newsletter to receive complimentary privileges and offers.
-				</p>
-				<p>
-					<form role="form">
-						<div class="row">
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control" id="firstname" placeholder="First Name">
-								</div>
-							</div>
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control" id="lastname" placeholder="Last Name">
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control" id="email" placeholder="Your Email">
-						</div>
-						<div class="checkbox small">
-							<label>
-								<input type="checkbox" checked> I'd like more information on becoming a <a href="#preffered">Preffered Customer</a>.
-							</label>
-						</div>
-						<button type="submit" class="btn btn-warning btn-block">Submit</button>
-					</form>
-				</p>
+
+				<%= render 'layouts/shortcodes/sign_up' -%>
+
 			</div>
 		</div>
 	</div>
