fix cruise picture order

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -79,7 +79,7 @@
 				<hr>
 			</div>
 			<div class="col-sm-6 col-sm-pull-6">
-				<h4>Browse by Date, Destination or Departing City</h4>
+				<h4>Browse by Date, Destination or Departing Airport</h4>
 
 				<%= render 'flights/search' -%>
 
