--- a/app/views/admin/admin/_datepicker.html.erb
+++ b/app/views/admin/admin/_datepicker.html.erb
@@ -2,10 +2,9 @@
 <% classes << dtp_class unless dtp_class.nil? -%>
 
 <div class="form-group">
-	<%= f.label field.to_sym -%>
+	<%= f.label field.to_sym, label -%>
 	<div class="input-group date">
-		<%#= f.text_field field.to_sym, class: classes.join(' '), id: "#{dtp_class}#{usec}", data: {default: f.object.send(field), stamp: usec} %>
-		<%= f.text_field field.to_sym, class: classes.join(' '), id: "#{dtp_class}#{usec}", data: {stamp: usec}, value: f.object.send(field).try(:strftime, '%m/%d/%Y %I:%M %p') %>
+		<%= f.text_field field.to_sym, class: classes.join(' '), id: "#{dtp_class}#{usec}", data: {stamp: usec}, value: f.object.send(field) %>
 		<span class="input-group-addon">
 			<span class="fa fa-fw fa-calendar"></span>
 		</span>
